force-app/main/default/objects/Article_Link__c/Article_Link__c.object-meta.xml
<CustomObject>
    <label>Article Link</label>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Article Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>