force-app/main/default/objects/Article_Link__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The article that you wish to link to the question</description>
    <inlineHelpText>The article that you wish to link to the question</inlineHelpText>
    <label>Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Article Links</relationshipLabel>
    <relationshipName>Article_Links</relationshipName>
    <type>Lookup</type>
</CustomField>