force-app/main/default/objects/Article_Link__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What Question are you linking the article too</description>
    <inlineHelpText>What Question are you linking the article too</inlineHelpText>
    <label>Question</label>
    <referenceTo>Deflection_Question__c</referenceTo>
    <relationshipLabel>Article Links</relationshipLabel>
    <relationshipName>Article_Links</relationshipName>
    <type>Lookup</type>
</CustomField>