force-app/main/default/objects/Article_Link__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <summarizedField>Article_Tracking__c.Rating__c</summarizedField>
    <summaryForeignKey>Article_Tracking__c.Article_Link__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>