force-app/main/default/objects/Article_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article__c</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>