force-app/main/default/objects/Article_Link__c/listViews/test_Article_Link.listView-meta.xml
<ListView>
    <fullName>test_Article_Link</fullName>
    <filterScope>Queue</filterScope>
    <label>test</label>
    <queue>test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>